PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/Billing__c.object-meta.xml
<CustomObject>
    <label>Billing Schedule</label>
    <nameField>
        <displayFormat>BG-{YY}{MM}{DD}-{0000}</displayFormat>
        <label>Seq</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>