PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/AmountBilled__c.field-meta.xml
<CustomField>
    <fullName>AmountBilled__c</fullName>
    <description>실제 청구된 금액을 집계하기 위해 생성</description>
    <formula>if( IsBilling__c = True,  BillingAmount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>청구한 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>