PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/AmountCollected__c.field-meta.xml
<CustomField>
    <fullName>AmountCollected__c</fullName>
    <description>실제 회수된 금액을 집계하기 위해 사용</description>
    <formula>if ( IsCollection__c = true,  CollectionAmount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>회수한 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>