PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>세금계산서 발송 대상 업체(미입력시 계약거래처가 자동으로 셋팅됨)</inlineHelpText>
    <label>청구대상</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BillingAccount</relationshipName>
    <type>Lookup</type>
</CustomField>