PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/BillingDate__c.field-meta.xml
<CustomField>
    <fullName>BillingDate__c</fullName>
    <inlineHelpText>계약서상 일자(변경X)</inlineHelpText>
    <label>청구계획일자</label>
    <type>Date</type>
</CustomField>