PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/BillingDelay__c.field-meta.xml
<CustomField>
    <fullName>BillingDelay__c</fullName>
    <description>변경 전
BLANKVALUE(TaxBillingDate__c ,TODAY()) -  BillingDate__c</description>
    <formula>IF ( IsBilling__c = True, &quot;&quot;,
IF ( TODAY()- TaxBillingDate__c &gt; 0, &quot;지연: &quot; + TEXT(TODAY()- TaxBillingDate__c) + &quot;일&quot;,
&quot;예정: &quot; + TEXT(TaxBillingDate__c - TODAY()) + &quot;일&quot;))</formula>
    <inlineHelpText>청구예정일이 경과되었으나 청구여부를 체크하지 않은 경우에 경과일수를 표시</inlineHelpText>
    <label>청구지연</label>
    <type>Text</type>
</CustomField>