PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/CollectDelay__c.field-meta.xml
<CustomField>
    <fullName>CollectDelay__c</fullName>
    <description>변경 전
BLANKVALUE(CollectionDate__c ,TODAY()) -  TaxBillingDate__c</description>
    <formula>IF ( IsCollection__c = True, &quot;&quot;,
IF ( TODAY() - CollectionDate__c &gt; 0, &quot;지연: &quot; + TEXT(TODAY() - CollectionDate__c ) + &quot;일&quot;,
&quot;예정: &quot; + TEXT(CollectionDate__c - TODAY()) + &quot;일&quot;))</formula>
    <inlineHelpText>수령예정일이 경과되었으나 수령여부를 체크하지 않은 경우에 경과일수를 표시</inlineHelpText>
    <label>수금지연</label>
    <type>Text</type>
</CustomField>