PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/CollectionAmount__c.field-meta.xml
<CustomField>
    <fullName>CollectionAmount__c</fullName>
    <label>수령금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>