PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/CollectionDate2__c.field-meta.xml
<CustomField>
    <fullName>CollectionDate2__c</fullName>
    <formula>CollectionDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>수령일자2</label>
    <type>Date</type>
</CustomField>