PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/CollectionDate__c.field-meta.xml
<CustomField>
    <fullName>CollectionDate__c</fullName>
    <inlineHelpText>수령일자 미입력 시 &quot;(세금계산서 발행일자) + (Account의 세금계산서 발행 후 회수일수)&quot;</inlineHelpText>
    <label>수령일자</label>
    <type>Date</type>
</CustomField>