PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>계약</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>Billing</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>