PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/ContractFees__c.field-meta.xml
<CustomField>
    <fullName>ContractFees__c</fullName>
    <label>청구금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>