PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>비고</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>