PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/fm_OutstandingFee__c.field-meta.xml
<CustomField>
    <fullName>fm_OutstandingFee__c</fullName>
    <formula>BillingAmount__c - CollectionAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>미수금</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>