PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/fm_Status__c.field-meta.xml
<CustomField>
    <fullName>fm_Status__c</fullName>
    <formula>IF(TaxBillingDate__c &gt; TODAY(), 
&apos;청구 예정&apos;, 
IF(NOT(IsBilling__c), 
&apos;청구 지연 &apos; + TEXT(TODAY() - TaxBillingDate__c) + &apos;일&apos;, 
IF(CollectionDate__c &gt; TODAY(), 
&apos;입금예정&apos;, 
IF(NOT(IsCollection__c), 
&apos;입금 지연 &apos; + TEXT(TODAY() - CollectionDate__c) + &apos;일&apos;, 
&apos;입금완료&apos; 
) 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>진행상태</label>
    <type>Text</type>
</CustomField>