PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/IsBilling__c.field-meta.xml
<CustomField>
    <fullName>IsBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>청구여부</label>
    <type>Checkbox</type>
</CustomField>