PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/IsCollection__c.field-meta.xml
<CustomField>
    <fullName>IsCollection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>수령여부</label>
    <type>Checkbox</type>
</CustomField>