PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/NotfullyAmount__c.field-meta.xml
<CustomField>
    <fullName>NotfullyAmount__c</fullName>
    <label>미수금</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>