PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/statementsend__c.field-meta.xml
<CustomField>
    <fullName>statementsend__c</fullName>
    <label>지급조건</label>
    <length>255</length>
    <type>Text</type>
</CustomField>