PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/statementsenddate__c.field-meta.xml
<CustomField>
    <fullName>statementsenddate__c</fullName>
    <label>계산서 발행일자</label>
    <type>Date</type>
</CustomField>