PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/fields/TaxBillingDate__c.field-meta.xml
<CustomField>
    <fullName>TaxBillingDate__c</fullName>
    <inlineHelpText>세금계산서 발행일자을 입력</inlineHelpText>
    <label>청구일자</label>
    <type>Date</type>
</CustomField>