PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/validationRules/Billing_Activity.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Activity</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
(
( NOT(ISNULL(TaxBillingDate__c)) &amp;&amp; ISNULL(BillingAmount__c ) )
 &amp;&amp; 
( NOT(ISNULL(BillingAmount__c )) &amp;&amp; ISNULL(TaxBillingDate__c) )
)
, NOT(ISNULL(BillingAmount__c )) &amp;&amp; NOT(ISNULL(TaxBillingDate__c))
, (
( NOT(ISNULL(TaxBillingDate__c)) &amp;&amp; ISNULL(BillingAmount__c ) )
  || 
( NOT(ISNULL(BillingAmount__c )) &amp;&amp; ISNULL(TaxBillingDate__c) )
)
)</errorConditionFormula>
    <errorMessage>&quot;세금계산서발행일자&quot; , &quot;청구금액&quot; 필수입력항목.</errorMessage>
</ValidationRule>