PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/listViews/Claimed_Project_Expense_All.listView-meta.xml
<ListView>
    <fullName>Claimed_Project_Expense_All</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>BillingAccount__c</columns>
    <columns>Type__c</columns>
    <columns>fm_Status__c</columns>
    <columns>BillingDueAmount__c</columns>
    <columns>BillingDate__c</columns>
    <columns>BillingAmount__c</columns>
    <columns>TaxBillingDate__c</columns>
    <columns>CollectionAmount__c</columns>
    <columns>CollectionDate__c</columns>
    <columns>fm_OutstandingFee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>