PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>BillingAccount__c</columns>
    <columns>Type__c</columns>
    <columns>fm_Status__c</columns>
    <columns>BillingDueAmount__c</columns>
    <columns>BillingDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsBilling__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>미청구</label>
</ListView>