PA_Education/TestMenifest/force-app/main/default/objects/Billing__c/listViews/NotCollect.listView-meta.xml
<ListView>
    <fullName>NotCollect</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>BillingAccount__c</columns>
    <columns>Type__c</columns>
    <columns>fm_Status__c</columns>
    <columns>BillingAmount__c</columns>
    <columns>TaxBillingDate__c</columns>
    <columns>CollectionAmount__c</columns>
    <columns>CollectionDate__c</columns>
    <columns>fm_OutstandingFee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCollection__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>IsBilling__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>미회수</label>
</ListView>